Fixed inline-block displays and text alignment. Wrapped images with an <a> tag.

--- a/streamlined/style.css
+++ b/streamlined/style.css
@@ -30,9 +30,10 @@ hr {
 }
 
 img {
-  display: inline-block;
+  display: block;
   height: auto;
-  max-width: 65%;
+  margin: auto;
+  max-width: 90%;
 }
 
 li {
@@ -43,11 +44,6 @@ li {
 }
 footer li {
   margin: 0 40px;
-}
-
-p {
-  display: block;
-  width: 100%;
 }
 
 svg {
@@ -66,8 +62,8 @@ svg:hover {
   border: 1px solid orange;
   color: #ffffff;
   display: block;
-  margin: 0.75rem 0.75rem 0.75rem 0;
-  padding: 0.5rem 1.5rem;
+  margin: 0.75rem;
+  padding: 0.5rem 2rem;
   text-decoration: none;
   text-transform: uppercase;
   transition: background-color 0.25s ease-in-out;
@@ -79,9 +75,20 @@ svg:hover {
   box-shadow: -1px 1px 5px rgb(201, 201, 201);
 }
 
+.columnSmall {
+  display: inline-block;
+  margin: auto;
+  text-align: center;
+  width: 25%;
+}
+.columnBig {
+  display: inline-block;
+  width: 75%;
+}
+
 .container {
   display: flex;
-  margin: 0 1rem;
+  margin: 0 1rem 1rem 1rem;
 }
 
 .emphatic {
@@ -98,7 +105,11 @@ svg:hover {
   float: right;
 }
 
-.spaceBetween {
+.marginBottom {
+  margin-bottom: 2.5rem;
+}
+
+.spaceEvenly {
   justify-content: space-evenly;
 }
 
@@ -122,22 +133,6 @@ svg:hover {
 }
 
 /* MEDIA QUERIES   */
-@media screen and (min-width: 900px) {
-  img {
-    max-width: 75%;
-  }
-}
-@media screen and (min-width: 700px) and (max-width: 899px) {
-  img {
-    max-width: 70%;
-  }
-}
-@media screen and (max-width: 469px) {
-  img {
-    max-width: 60%;
-  }
-}
-
 @media screen and (max-width: 415px) {
   li {
     margin-left: 20px;
